# ruth

./: CMakeLists.txt  main.cpp  notes.txt
